# PolymarketBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  config.example.yaml  config.railway.yaml  entrypoint.sh  pyproject.toml  railway.toml
config/: cities.json
docs/: RUNBOOK.md
docs/superpowers/plans/: 2026-03-17-polymarket-bot.md  2026-03-20-logging-analytics-calibration.md  2026-03-21-signal-batching.md  2026-04-06-hardening-to-9-plus.md  2026-04-06-weather-rewrite-plan1-data-pipeline.md  2026-04-06-weather-rewrite-plan2-trading-system.md  2026-04-06-weather-rewrite-plan3-frontend.md
docs/superpowers/specs/: 2026-03-17-polymarket-bot-design.md  2026-04-05-weather-arbitrage-rewrite.md  CLAUDE.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ApiKeyGate.tsx  Layout.tsx
frontend/src/pages/: Calibration.tsx  Cities.tsx  Config.tsx  History.tsx  Jobs.tsx  Logs.tsx  Opportunities.tsx  Overview.tsx  Positions.tsx  Weather.tsx
migrations/: env.py  script.py.mako
migrations/versions/: 6ed442800155_initial_schema_from_current_models.py  a1b2c3d4e5f6_add_trades_event_slug.py
polymarket_bot/: __init__.py  __main__.py  analytics.py  app.py  calibrator.py  cli.py  config.py  database.py  event_bus.py  exit_manager.py  fast_trader.py  logging_config.py  market_filter.py  models.py  poller.py  resolution_tracker.py  scanner.py  thin_market_detector.py
polymarket_bot/arbitrage/: detector.py  mapper.py  monitor.py  structural_arb.py
polymarket_bot/backtesting/: data_loader.py  engine.py
polymarket_bot/data_sources/: manifold.py  metaculus.py
polymarket_bot/decision/: engine.py  risk.py
polymarket_bot/execution/: engine.py
polymarket_bot/notifications/: base.py  discord.py  telegram.py
polymarket_bot/signals/: base.py  bookmaker.py  crypto_price.py  divergence.py  favorite_longshot.py  llm.py  news.py  polls.py  social.py  weather.py  whale.py
polymarket_bot/web/: server.py
polymarket_bot/web/templates/: index.html
polymarket_weather/: __main__.py  app.py  cli.py  config.py  errors.py  event_bus.py  logging_filters.py  resilience.py  runtime.py  scheduler.py  server.py
polymarket_weather/alerts/: telegram.py
polymarket_weather/api/: auth.py  dashboard.py
polymarket_weather/db/: models.py  persistence.py  session.py
polymarket_weather/markets/: parser.py  scanner.py
polymarket_weather/trading/: calibration.py  executor.py  mismatch.py  pipeline.py  positions.py  risk.py
polymarket_weather/weather/: city_mapper.py  collector.py  forecast.py  nwp.py
scripts/: backfill_event_slugs.py  generate_clob_creds.py
tests/: conftest.py  test_alerts.py  test_app.py  test_calibration_queries.py  test_calibrator.py  test_city_mapper.py  test_cli.py  test_collector.py  test_config.py  test_dashboard_api.py  test_dashboard_auth.py  test_database.py  test_db_models.py  test_errors.py  test_event_bus.py  test_executor.py  test_exit_manager.py  test_fast_trader.py  test_forecast.py  test_integration.py  test_logging_config.py  test_logging_filters.py  test_market_filter.py  test_mismatch.py  test_models.py  test_nwp.py  test_parser.py  test_parser_polymarket_daily.py  test_persistence.py  test_phase1_bugs.py  test_phase3.py  test_phase4_math.py  test_phase4_pipeline.py  test_phase6_coverage.py  test_phase8.py  test_poller.py  test_positions.py  test_resolution_tracker.py  test_risk.py  test_runtime.py  (+4 more)
tests/test_arbitrage/: test_detector.py  test_mapper.py  test_monitor.py  test_structural_arb.py
tests/test_backtesting/: test_engine.py
tests/test_data_sources/: test_metaculus.py
tests/test_decision/: test_engine.py  test_risk.py
tests/test_execution/: test_engine.py
tests/test_notifications/: test_discord.py  test_telegram.py
tests/test_signals/: test_base.py  test_bookmaker.py  test_crypto_price.py  test_divergence.py  test_favorite_longshot.py  test_llm.py  test_news.py  test_polls.py  test_social.py  test_weather.py  test_whale.py
