[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Signal-based trading bot for Polymarket with cross-platform arbitrage detection"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "py-clob-client>=0.17.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "rich>=13.9.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
]

[project.scripts]
polymarket-bot = "polymarket_bot.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
