[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "polymarket-weather"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "rich>=13.9.0",
    "py-clob-client>=0.17.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=4.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "pytest-mock>=3.14.0", "ruff>=0.6.0", "aiosqlite>=0.20.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]

[project.scripts]
polymarket-weather = "polymarket_weather.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
