[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["polymarket_weather*"]
exclude = ["polymarket_bot*", "tests*", "frontend*"]

[project]
name = "polymarket-weather"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "rich>=13.9.0",
    "py-clob-client>=0.17.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "pytest-mock>=3.14.0", "ruff>=0.6.0", "aiosqlite>=0.20.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.32.0", "slowapi>=0.1.9"]

[project.scripts]
polymarket-weather = "polymarket_weather.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# mypy — production type-check bar (Phase 7.1)
# ---------------------------------------------------------------------------
# We deliberately do NOT enable full --strict because:
#   - disallow_any_generics is too noisy on existing dict / list usage
#   - third-party packages (httpx, telegram, py_clob_client, scipy.stats)
#     don't ship type stubs, so disallow_subclassing_any blows up
#   - several Pydantic dataclass quirks need explicit Any escapes that hurt
#     readability without catching real bugs
#
# What we DO enforce (the bug-finding checks):
#   - disallow_untyped_defs: every function must have annotations
#   - check_untyped_defs: type-check the bodies of those functions
#   - warn_unused_ignores: dead `# type: ignore` lines fail
#   - warn_return_any: don't silently leak Any out of typed APIs
#   - no_implicit_optional: `x: int = None` is rejected
#   - warn_redundant_casts: dead casts fail
[tool.mypy]
python_version = "3.12"
files = ["polymarket_weather"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true

# Per-module overrides for files that interface with untyped third-party APIs.
# These get a softer bar so we don't have to litter inline ignores.
[[tool.mypy.overrides]]
module = [
    "polymarket_weather.alerts.*",
    "polymarket_weather.trading.executor",
    "polymarket_weather.weather.collector",
    "polymarket_weather.weather.nwp",
    "polymarket_weather.markets.scanner",
]
warn_return_any = false
disable_error_code = ["assignment", "attr-defined", "unreachable", "arg-type", "call-arg", "name-defined", "return-value"]
